# linkscope

./: .gitignore  Cargo.toml  README.md
linkscope-macros/: Cargo.toml
linkscope-macros/src/: lib.rs
research/: SYNTHESIS.md
src/: counters.rs  lib.rs  mermaid.rs  model.rs  profile.rs  report.rs  rss.rs  trace_fields.rs  trace_render.rs
tests/: macros.rs  mermaid.rs  profile.rs  snapshot.rs
